--- a/xnview/.config/xnviewmp/xnview.ini
+++ b/xnview/.config/xnviewmp/xnview.ini
@@ -2,8 +2,8 @@
 startInFull=0
 sessionFlag=2
 updater=0
-OpenWith=/usr/bin/gimp, /usr/bin/inkscape
-OpenWithName=Gimp, Inkscape
+OpenWith=/usr/bin/gimp, /usr/bin/inkscape, /usr/bin/darktable
+OpenWithName=Gimp, Inkscape, Darktable
 style=-2
 
 [Browser]
