mpv: fast profile if 4k

--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -11,7 +11,7 @@ force-window = yes
 
 # Forcibly enable any hardware decoder found.  On modern Intel mobile CPUs, the
 # vaapi decoder is selected if no other decoders are found.
-hwdec = auto-copy
+hwdec = auto
 
 # Do not terminate when playing or seeking beyond the end of the file, and
 # there is no next file to be played.
@@ -66,3 +66,14 @@ autofit = 80%x80%
 
 # yt-dlp quality.
 ytdl-format = 'bestvideo[height<=?1080]+bestaudio/best[height<=?1080]/best'
+
+[fast]
+allow-delayed-peak-detect=yes
+correct-downscaling=no
+cscale=bilinear
+dither=no
+dscale=bilinear
+hdr-compute-peak=no
+linear-downscaling=no
+scale=bilinear
+sigmoid-upscaling=no
