--- a/i3/.config/i3/i3status.conf
+++ b/i3/.config/i3/i3status.conf
@@ -53,8 +53,8 @@ cpu_usage {
 
 cpu_temperature 0 {
   | case $(uname -n) in
-  |   boron|lithium)  echo 'path = "/sys/class/thermal/thermal_zone0/temp"' ;;
-  |   magrathea)      echo 'path = "/sys/class/thermal/thermal_zone1/temp"' ;;
+  |   boron|lithium)    echo 'path = "/sys/class/thermal/thermal_zone0/temp"' ;;
+  |   magrathea|carbon) echo 'path = "/sys/class/thermal/thermal_zone1/temp"' ;;
   | esac
 
   format = "tmp %degrees°"
