--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -67,6 +67,10 @@ autofit = 80%x80%
 # yt-dlp quality.
 ytdl-format = 'bestvideo[height<=?1080]+bestaudio/best[height<=?1080]/best'
 
+# Higher quality video output and scaling.
+profile = gpu-hq
+scale = spline36
+
 [fast]
 allow-delayed-peak-detect=yes
 correct-downscaling=no
