--- a/curl/.curlrc
+++ b/curl/.curlrc
@@ -21,9 +21,9 @@ show-error
 # previous URL (if available).
 referer = ";auto"
 
-# Makes curl scan the .netrc (_netrc on Windows) file in the user's home
-# directory for login name and password.
-netrc
+# Makes curl optionally scan the .netrc (_netrc on Windows) file in the
+# user's home directory for login name and password.
+netrc-optional
 
 # When used in conjunction with the -o option, curl will create the
 # necessary local directory hierarchy as needed.
