--- a/i3/.config/i3/i3status.conf
+++ b/i3/.config/i3/i3status.conf
@@ -25,6 +25,10 @@ general {
 |     order += "battery all"
 |   EOF
 |   ;;
+|   carbon) cat <<EOF
+|     order += "wireless _first_"
+|   EOF
+|   ;;
 | esac
 
 order += "cpu_usage"
