--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -25,13 +25,13 @@ Host kobo
     HostName 192.168.0.101
     User root
 
-Host bx11
+Host storagebox
     Hostname 167.235.175.63
     User u455095
     Port 23
 
-Host hero
+Host seedhost
     HostName 37.48.111.139
     User spinor
-    LocalForward 2200 95.168.162.225:22
+    LocalForward 2200 37.48.111.139:22
     DynamicForward 1234
