--- a/mpv/.config/mpv/input.conf
+++ b/mpv/.config/mpv/input.conf
@@ -11,7 +11,7 @@ shift+wheel_down add volume -5
 = add audio-delay  0.100
 - add audio-delay -0.100
 
-A cycle-values video-aspect "16:9" "16:10" "4:3" "2.21:1" "2.35:1" "2.39:1" "5:4" "1:1" "-1"
+A cycle-values video-aspect-override "16:9" "16:10" "4:3" "2.21:1" "2.35:1" "2.39:1" "5:4" "1:1" "-1"
 
 # Mirror video using M.
 # Note that the "hwdec" value in mpv.conf may need to be
