--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -11,7 +11,8 @@ force-window = yes
 
 # Forcibly enable any hardware decoder found.  On modern Intel mobile CPUs, the
 # vaapi decoder is selected if no other decoders are found.
-hwdec = auto
+# If one uses "auto" instead of "auto-copy", video filters will not work.
+hwdec = auto-copy
 
 # Do not terminate when playing or seeking beyond the end of the file, and
 # there is no next file to be played.
