--- a/i3/.config/i3/i3status.conf
+++ b/i3/.config/i3/i3status.conf
@@ -47,6 +47,7 @@ battery all {
   status_bat = "batt"
   status_unk = "unkw"
   status_full = "full"
+  status_idle = "idle"
   last_full_capacity = true
   hide_seconds = true
 }
