--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -26,11 +26,11 @@ Host kobo
     User root
 
 Host storagebox
-    Hostname 167.235.175.63
+    Hostname u455095.your-storagebox.de
     User u455095
     Port 23
 
-Host seedhost
+Host seedbox
     HostName 37.48.111.139
     User spinor
     LocalForward 2200 37.48.111.139:22
