--- a/qpdfview/.config/qpdfview/qpdfview.conf
+++ b/qpdfview/.config/qpdfview/qpdfview.conf
@@ -19,3 +19,4 @@ viewToolBar=scaleFactor, zoomIn, zoomOut, ontinuousMode, twoPagesMode, rotateLef
 [pageItem]
 backgroundColor=@Variant(\0\0\0\x43\x1\xff\xff\x33\x33\x33\x33\x33\x33\0\0)
 decorateLinks=false
+useDevicePixelRatio=true
